--- a/workflow-templates/lambda-prod.yml
+++ b/workflow-templates/lambda-prod.yml
@@ -1,10 +1,25 @@
 name: Octo Organization CI
 
-on:
-  push:
-    branches: [ main ]
-  paths:
-    - 'lambda_function.py'
+on: 
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Type of deployment'
+        required: true
+        default: 'Release'
+        type: choice
+        options:
+        - Info
+        - Release
+        - Debug
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 
 env:
   BUCKET_NAME:      #Name of the bucket which contains the lambda code 
@@ -12,7 +27,7 @@ env:
   LAMBDA_NAME:    #Name of lambda function 
   PACKAGE_NAME:   #Name of the zip file 
   AWS_REGION:   #AWS Region (usually is just eu-west-1, which is Ireland)
-  AWS_ACCOUNT_ID:   #ID of the Dev account in which you want to deploy the lambda function
+  AWS_ACCOUNT_ID:   #ID of the Prod account in which you want to deploy the lambda function 
 
 jobs:
   deploy:
