--- a/workflow-templates/lambda.yml
+++ b/workflow-templates/lambda.yml
@@ -10,7 +10,7 @@ on:
         description: 'Deployment environment'
         required: true
         default: 'dev'
-        type: string
+        type: choice
         options:
           - dev
           - prod
@@ -32,23 +32,33 @@ jobs:
   deploy:
     name: Upload to Amazon S3 and Update Lambda
     runs-on: ubuntu-latest
+    # These permissions are needed to interact with GitHub's OIDC Token endpoint.
+    permissions:
+      id-token: write # This is required for requesting the JWT
+      contents: read # This is required for actions/checkout
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Zip Folder
-        run: zip -r ${{ env.PACKAGE_NAME_${{ github.event_name == 'push' ? 'DEV' : 'PROD' }}} lambda_function.py
+        run: |
+          if [ "${{ github.event_name == 'push' }}" ]; then
+            zip -r ${{ env.PACKAGE_NAME_DEV }} lambda_function.py
+          else
+            zip -r ${{ env.PACKAGE_NAME_PROD }} lambda_function.py
+          fi
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ github.event_name == 'push' ? env.AWS_ACCOUNT_ID_DEV : env.AWS_ACCOUNT_ID_PROD }}:role/github-access-control-identity-provider-role-widget
+          role-to-assume: arn:aws:iam::${{ (github.event_name == 'push') && env.AWS_ACCOUNT_ID_DEV || env.AWS_ACCOUNT_ID_PROD }}:role/github-access-control-identity-provider-role-widget
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Copy files to the S3 bucket
         run: |
-          aws s3 cp ${{ env.PACKAGE_NAME_${{ github.event_name == 'push' ? 'DEV' : 'PROD' }}} s3://${{ env.BUCKET_NAME_${{ github.event_name == 'push' ? 'DEV' : 'PROD' }}}/${{ env.S3_KEY_${{ github.event_name == 'push' ? 'DEV' : 'PROD' }}}}
+          aws s3 cp ${{ (github.event_name == 'push') && env.PACKAGE_NAME_DEV || env.PACKAGE_NAME_PROD }} s3://${{ (github.event_name == 'push') && env.BUCKET_NAME_DEV || env.BUCKET_NAME_PROD }}/${{ (github.event_name == 'push') && env.S3_KEY_DEV || env.S3_KEY_PROD }}
 
       - name: Update the code in lambda
         run: |
+          aws lambda update-function-code --function-name ${{ (github.event_name == 'push') && env.LAMBDA_NAME_DEV || env.LAMBDA_NAME_PROD }} --s3-bucket ${{ (github.event_name == 'push') && env.BUCKET_NAME_DEV || env.BUCKET_NAME_PROD }} --s3-key ${{ (github.event_name == 'push') && env.S3_KEY_DEV || env.S3_KEY_PROD }}
           aws lambda update-function-code --function-name ${{ env.LAMBDA_NAME_${{ github.event_name == 'push' ? 'DEV' : 'PROD' }}} --s3-bucket ${{ env.BUCKET_NAME_${{ github.event_name == 'push' ? 'DEV' : 'PROD' }}} --s3-key ${{ env.S3_KEY_${{ github.event_name == 'push' ? 'DEV' : 'PROD' }}}}
